# college_placement_ml_app_fastapi

./: label_encoders.pkl  main.py  model.pkl  pyproject.toml  scaler.pkl  spotify.csv  train.py
